<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.gauthamhemanth.portfolioapp.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="30dp"
        android:id="@+id/title_tv"
        />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/title_tv"
        android:layout_marginTop="10dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spotify"
            android:id="@+id/spotify_bt"
            android:layout_gravity="center_horizontal"
            android:background="#F08C35"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:onClick="buttonClicked"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:id="@+id/score_bt"
            android:background="#F08C35"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:onClick="buttonClicked"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/library"
            android:id="@+id/library_bt"
            android:background="#F08C35"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:onClick="buttonClicked"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buildit"
            android:id="@+id/build_bt"
            android:background="#F08C35"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:onClick="buttonClicked"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/xyz"
            android:id="@+id/xyz_bt"
            android:background="#F08C35"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:onClick="buttonClicked"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/capstone"
            android:id="@+id/capstone_bt"
            android:background="#c93119"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:onClick="buttonClicked"/>
    </LinearLayout>

</RelativeLayout>
